Updated the code..

--- a/test.html
+++ b/test.html
@@ -46,7 +46,7 @@
         }
         #wrapper{
             margin:0px auto;
-
+            width:860px;
             text-align: center;
         }
         .left{
@@ -63,12 +63,11 @@
 <body>
     <div id="wrapper">
         <div>
-            <span>source:</span> <a href="">GitHub</a>
-            <span>download:</span> <a href="">here</a>
-
+            <span>Source:</span> <a href="">GitHub</a>
+            <span>Download:</span> <a href="">here</a>
         </div>
-
         <div style="clear:both;"></div>
+        <br/><br/>
         <div class="left">
             Original Image: <br/>
             <img src="images/image5.jpg" class="" />
